k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axolobot
  labels:
    app: axolobot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axolobot
  template:
    metadata:
      labels:
        app: axolobot
    spec:
      containers:
        - name: twitter-bot
          image: ghcr.io/raporpe/axolobot-twitter-bot:v0.2
        - name: neural-network
          image: ghcr.io/raporpe/axolobot-neural-network:v0.2
          ports:
            - containerPort: 8080
              protocol: TCP
        - name: db
          image: ghcr.io/raporpe/axolobot-db:v0.2
          ports:
            - containerPort: 3306
              protocol: TCP
